added queries parameters
