# vehicle-server/apis/abstraction/openapi.yaml
@@ -14,6 +14,17 @@ paths:
       tags:
         - Vehicle Management
       summary: Retrieve vehicle information
+      parameters:
+        - in: query
+          name: type
+          schema:
+            $ref: "#/components/schemas/VehicleType"
+          description: The type of the vehicle to be filtered
+        - in: query
+          name: color
+          schema:
+            $ref: "#/components/schemas/VehicleColor"
+          description: The color of the vehicle to be filtered
       responses:
         "200":
           description: OK
